--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
     It is crucial for resolving boundary disputes between neighbors. The MeeBhoomi portal allows you to download these sketches digitally.
 </p>
 <div class="blog-image">
-    <img src="field.png" alt="Sample of MeeBhoomi Adangal Pahani Document" width="600" height="350">
+    <img src="Field.png" alt="Sample of MeeBhoomi Adangal Pahani Document" width="600" height="350">
 </div>
 
 <h2>How to Download Your Adangal Online</h2>
@@ -358,4 +358,5 @@ FMB sketches are being digitized progressively. If your village map is not avail
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
+
 </html>
