--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@
             Adangal Services
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="https://meebhoomi.ap.gov.in/">Your Adangal</a></li>
-            <li><a class="dropdown-item" href="https://meebhoomi.ap.gov.in/">Village Adangal</a></li>
+            <li><a class="dropdown-item" href="https://meebhoomi.ap.gov.in/#">Your Adangal</a></li>
+            <li><a class="dropdown-item" href="https://meebhoomi.ap.gov.in/#">Village Adangal</a></li>
           </ul>
         </li>
 
@@ -360,4 +360,5 @@ FMB sketches are being digitized progressively. If your village map is not avail
 </body>
 
 </html>
+
 
