--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@
             Adangal Services
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="https://meebhoomi.ap.gov.in">Your Adangal</a></li>
-            <li><a class="dropdown-item" href="https://meebhoomi.ap.gov.in/#">Village Adangal</a></li>
+            <li><a class="dropdown-item" href="https://meebhoomi.ap.gov.in/">Your Adangal</a></li>
+            <li><a class="dropdown-item" href="https://meebhoomi.ap.gov.in/">Village Adangal</a></li>
           </ul>
         </li>
 
@@ -343,7 +343,7 @@ FMB sketches are being digitized progressively. If your village map is not avail
 
 <footer class="bg-custom text-center py-3">
   <div class="container">
-      <p><strong>Disclaimer:</strong> This website amis to provide information about Meebhoomi. We are not affiliated with the Government of Andhra Pradesh. This website is created for the public convienience.</p>
+      <p><strong>Disclaimer:</strong> This website aims to provide information about Meebhoomi. We are not affiliated with the Government of Andhra Pradesh. This website is created for the public convienience.</p>
     <div class="mb-2">
       <a href="https://meebhoomiap.in">Home</a> |
       <a href="https://meebhoomiap.in/about-us.html">About Us</a> |
@@ -360,6 +360,7 @@ FMB sketches are being digitized progressively. If your village map is not avail
 </body>
 
 </html>
+
 
 
 
