--- a/about-us.html
+++ b/about-us.html
@@ -181,7 +181,7 @@
 
 <main id="main-content">
 <div class="container-fluid my-4">
-        <h2>Who We Are</h2>
+        <h1>About Us</h1>
         <p>
           Welcome to the <strong>MeeBhoomi Portal</strong>. We are an independent educational resource dedicated to helping the residents of Andhra Pradesh navigate the complexities of digital land records. Our mission is to bridge the gap between complex government systems and the common citizen by providing clear, step-by-step guides.
         </p>
@@ -231,4 +231,5 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
+
 </html>
