--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             Adangal Services
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="https://meebhoomi.ap.gov.in/">Your Adangal</a></li>
+            <li><a class="dropdown-item" onclick="window.open('https://meebhoomi.ap.gov.in/', '_blank', 'noopener,noreferrer')">Your Adangal</a></li>
             <li><a class="dropdown-item" href="https://meebhoomi.ap.gov.in/">Village Adangal</a></li>
           </ul>
         </li>
@@ -360,6 +360,7 @@ FMB sketches are being digitized progressively. If your village map is not avail
 </body>
 
 </html>
+
 
 
 
