--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
           </a>
           <ul class="dropdown-menu">
             <li><a class="dropdown-item" onclick="window.open('https://meebhoomi.ap.gov.in/', '_blank', 'noopener,noreferrer')">Your Adangal</a></li>
-            <li><a class="dropdown-item" href="https://meebhoomi.ap.gov.in/">Village Adangal</a></li>
+            <li><a class="dropdown-item" onclick="window.open('https://meebhoomi.ap.gov.in/', '_blank', 'noopener,noreferrer')">Village Adangal</a></li>
           </ul>
         </li>
 
@@ -162,8 +162,8 @@
             ROR 1-B Records
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="https://meebhoomi.ap.gov.in/">Your 1-B Record</a></li>
-            <li><a class="dropdown-item" href="https://meebhoomi.ap.gov.in/">Village 1-B</a></li>
+            <li><a class="dropdown-item" onclick="window.open('https://meebhoomi.ap.gov.in/', '_blank', 'noopener,noreferrer')">Your 1-B Record</a></li>
+            <li><a class="dropdown-item" onclick="window.open('https://meebhoomi.ap.gov.in/', '_blank', 'noopener,noreferrer')">Village 1-B</a></li>
           </ul>
         </li>
 
@@ -172,8 +172,8 @@
              Maps & FMB
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="https://meebhoomi.ap.gov.in/">Field Measurement Book (FMB)</a></li>
-            <li><a class="dropdown-item" href="https://meebhoomi.ap.gov.in/">Village Maps</a></li>
+            <li><a class="dropdown-item" onclick="window.open('https://meebhoomi.ap.gov.in/', '_blank', 'noopener,noreferrer')">Field Measurement Book (FMB)</a></li>
+            <li><a class="dropdown-item" onclick="window.open('https://meebhoomi.ap.gov.in/', '_blank', 'noopener,noreferrer')">Village Maps</a></li>
           </ul>
         </li>
 
@@ -198,12 +198,12 @@
 
  <h2 id="dashboard" style="padding-top: 60px; margin-top: -30px;">Online Services Dashboard</h2>
   <div class="row g-3 mb-4">
-    <div class="col-md-4 col-6"><a class="btn service-btn" href="https://meebhoomi.ap.gov.in/" target="_blank">MeeBhoomi Portal</a></div>
-    <div class="col-md-4 col-6"><a class="btn service-btn" href="https://meebhoomi.ap.gov.in/" target="_blank">Your Adangal</a></div>
-    <div class="col-md-4 col-6"><a class="btn service-btn" href="https://meebhoomi.ap.gov.in/" target="_blank">Your 1-B (ROR)</a></div>
-    <div class="col-md-4 col-6"><a class="btn service-btn" href="https://meebhoomi.ap.gov.in/" target="_blank">FMB (Village Map)</a></div>
-    <div class="col-md-4 col-6"><a class="btn service-btn" href="https://meebhoomi.ap.gov.in/" target="_blank">Aadhaar Linking</a></div>
-    <div class="col-md-4 col-6"><a class="btn service-btn" href="https://meebhoomi.ap.gov.in/" target="_blank">Search by Name</a></div>
+    <div class="col-md-4 col-6"><a class="btn service-btn" onclick="window.open('https://meebhoomi.ap.gov.in/', '_blank', 'noopener,noreferrer')">MeeBhoomi Portal</a></div>
+    <div class="col-md-4 col-6"><a class="btn service-btn" onclick="window.open('https://meebhoomi.ap.gov.in/', '_blank', 'noopener,noreferrer')">Your Adangal</a></div>
+    <div class="col-md-4 col-6"><a class="btn service-btn" onclick="window.open('https://meebhoomi.ap.gov.in/', '_blank', 'noopener,noreferrer')">Your 1-B (ROR)</a></div>
+    <div class="col-md-4 col-6"><a class="btn service-btn" onclick="window.open('https://meebhoomi.ap.gov.in/', '_blank', 'noopener,noreferrer')">FMB (Village Map)</a></div>
+    <div class="col-md-4 col-6"><a class="btn service-btn" onclick="window.open('https://meebhoomi.ap.gov.in/', '_blank', 'noopener,noreferrer')">Aadhaar Linking</a></div>
+    <div class="col-md-4 col-6"><a class="btn service-btn" onclick="window.open('https://meebhoomi.ap.gov.in/', '_blank', 'noopener,noreferrer')">Search by Name</a></div>
  </div>
     
  <table>
@@ -360,6 +360,7 @@ FMB sketches are being digitized progressively. If your village map is not avail
 </body>
 
 </html>
+
 
 
 
