--- a/index.html
+++ b/index.html
@@ -198,12 +198,12 @@
 
  <h2 id="dashboard" style="padding-top: 60px; margin-top: -30px;">Online Services Dashboard</h2>
   <div class="row g-3 mb-4">
-    <div class="col-md-4 col-6"><a class="dropdown-item" href="https://meebhoomi.ap.gov.in/" target="_blank" rel="noopener noreferrer">MeeBhoomi Portal</a></div>
-    <div class="col-md-4 col-6"><a class="dropdown-item" href="https://meebhoomi.ap.gov.in/" target="_blank" rel="noopener noreferrer">View Adangal</a></div>
-    <div class="col-md-4 col-6"><a class="dropdown-item" href="https://meebhoomi.ap.gov.in/" target="_blank" rel="noopener noreferrer">View 1-B (ROR)</a></div>
-    <div class="col-md-4 col-6"><a class="dropdown-item" href="https://meebhoomi.ap.gov.in/" target="_blank" rel="noopener noreferrer">FMB (Village Map)</a></div>
-    <div class="col-md-4 col-6"><a class="dropdown-item" href="https://meebhoomi.ap.gov.in/" target="_blank" rel="noopener noreferrer">Aadhaar Linking</a></div>
-    <div class="col-md-4 col-6"><a class="dropdown-item" href="https://meebhoomi.ap.gov.in/" target="_blank" rel="noopener noreferrer">Search by Name</a></div>
+    <div class="col-md-4 col-6"><a class="btn service-btn" href="https://meebhoomi.ap.gov.in/" target="_blank" rel="noopener noreferrer">MeeBhoomi Portal</a></div>
+    <div class="col-md-4 col-6"><a class="btn service-btn" href="https://meebhoomi.ap.gov.in/" target="_blank" rel="noopener noreferrer">View Adangal</a></div>
+    <div class="col-md-4 col-6"><a class="btn service-btn" href="https://meebhoomi.ap.gov.in/" target="_blank" rel="noopener noreferrer">View 1-B (ROR)</a></div>
+    <div class="col-md-4 col-6"><a class="btn service-btn" href="https://meebhoomi.ap.gov.in/" target="_blank" rel="noopener noreferrer">FMB (Village Map)</a></div>
+    <div class="col-md-4 col-6"><a class="btn service-btn" href="https://meebhoomi.ap.gov.in/" target="_blank" rel="noopener noreferrer">Aadhaar Linking</a></div>
+    <div class="col-md-4 col-6"><a class="btn service-btn" href="https://meebhoomi.ap.gov.in/" target="_blank" rel="noopener noreferrer">Search by Name</a></div>
  </div>
     
  <table>
@@ -360,6 +360,7 @@ FMB sketches are being digitized progressively. If your village map is not avail
 </body>
 
 </html>
+
 
 
 
