--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="MeeBhoomi (మీభూమి) is the official digital land records portal of the Government of Andhra Pradesh (AP), managed by the Department of Revenue.">
   <meta name="keywords" content="MeeBhoomi, meebhoomi ap, your adangal, ror 1b, village map ap, meebhoomi adangal, fmb, land records andhra pradesh, meebhoomi login, meebhoomi Passbook, webland">
 
-  <link rel="icon" href="/favicon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon.png">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
   <style>
@@ -360,6 +360,7 @@ FMB sketches are being digitized progressively. If your village map is not avail
 </body>
 
 </html>
+
 
 
 
