--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     }
 
     th, td { border: 1px solid #ddd; padding: 12px; }
-    th { background-color: #003366; color: white; }
+    th { background-color: #f4f4f4; color: #003366; }
     tr:nth-child(even) { background-color: #f9f9f9; }
     tr:hover { background-color: #f1f1f1; }
   </style>
@@ -360,6 +360,7 @@ FMB sketches are being digitized progressively. If your village map is not avail
 </body>
 
 </html>
+
 
 
 
