--- a/index.html
+++ b/index.html
@@ -153,17 +153,17 @@
           </a>
           <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="https://meebhoomi.ap.gov.in/" target="_blank" rel="noopener noreferrer">View Adangal</a></li>
-            <li><a class="dropdown-item" href="https://meebhoomi.ap.gov.in/" target="_blank" rel="noopener noreferrer">Village Adangal</a></li>
+            <li><a class="dropdown-item" href="https://meebhoomi.ap.gov.in/" target="_blank" rel="noopener noreferrer">Land Dispute</a></li>
           </ul>
         </li>
 
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle fw-bold text-white" href="#" role="button" data-bs-toggle="dropdown">
-            ROR 1-B Records
+            ROFR 1-B Records
           </a>
           <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="https://meebhoomi.ap.gov.in/" target="_blank" rel="noopener noreferrer">View 1-B Record</a></li>
-            <li><a class="dropdown-item" href="https://meebhoomi.ap.gov.in/" target="_blank" rel="noopener noreferrer">Village 1-B</a></li>
+            <li><a class="dropdown-item" href="https://meebhoomi.ap.gov.in/" target="_blank" rel="noopener noreferrer">Village ROFR</a></li>
           </ul>
         </li>
 
@@ -200,10 +200,10 @@
   <div class="row g-3 mb-4">
     <div class="col-md-4 col-6"><a class="btn service-btn" href="https://meebhoomi.ap.gov.in/" target="_blank" rel="noopener noreferrer">MeeBhoomi Portal</a></div>
     <div class="col-md-4 col-6"><a class="btn service-btn" href="https://meebhoomi.ap.gov.in/" target="_blank" rel="noopener noreferrer">View Adangal</a></div>
-    <div class="col-md-4 col-6"><a class="btn service-btn" href="https://meebhoomi.ap.gov.in/" target="_blank" rel="noopener noreferrer">View 1-B (ROR)</a></div>
+    <div class="col-md-4 col-6"><a class="btn service-btn" href="https://meebhoomi.ap.gov.in/" target="_blank" rel="noopener noreferrer">View 1-B (ROFR)</a></div>
     <div class="col-md-4 col-6"><a class="btn service-btn" href="https://meebhoomi.ap.gov.in/" target="_blank" rel="noopener noreferrer">FMB (Village Map)</a></div>
     <div class="col-md-4 col-6"><a class="btn service-btn" href="https://meebhoomi.ap.gov.in/" target="_blank" rel="noopener noreferrer">Aadhaar Linking</a></div>
-    <div class="col-md-4 col-6"><a class="btn service-btn" href="https://meebhoomi.ap.gov.in/" target="_blank" rel="noopener noreferrer">Search by Name</a></div>
+    <div class="col-md-4 col-6"><a class="btn service-btn" href="https://meebhoomi.ap.gov.in/VAdangal/PPRequest" target="_blank" rel="noopener noreferrer">View Passbook</a></div>
  </div>
     
  <table>
@@ -360,6 +360,7 @@ FMB sketches are being digitized progressively. If your village map is not avail
 </body>
 
 </html>
+
 
 
 
