--- a/index.html
+++ b/index.html
@@ -256,7 +256,13 @@
     The <strong>Adangal</strong> (also known as Pahani in other states) is the primary land record maintained by the Village Revenue Officer. It contains:
 </p>
 <div class="blog-image">
-    <img src="adangal.png" alt="Sample of MeeBhoomi Adangal Pahani Document" width="600" height="350">
+    <img 
+  src="adangal.webp" 
+  srcset="adangal.webp 400w, adangal.webp 800w, adangal.webp 1200w" 
+  sizes="(max-width: 600px) 388px, 600px"
+  alt="Sample of MeeBhoomi Adangal Pahani Document" 
+  width="388" 
+  height="220">
 </div>
 <ul>
   <li><strong>Owner Details:</strong> Name of the landholder.</li>
@@ -270,7 +276,13 @@
     The <strong>Record of Rights (1-B)</strong> is the legal proof of land ownership. Unlike the Adangal which focuses on cultivation, the 1-B is strictly an ownership title record used for:
 </p>
 <div class="blog-image">
-    <img src="ror.png" alt="Sample of MeeBhoomi Adangal Pahani Document" width="600" height="350">
+    <img 
+  src="ror.webp" 
+  srcset="ror.webp 400w, ror.webp 800w, ror.webp 1200w" 
+  sizes="(max-width: 600px) 388px, 600px"
+  alt="Sample of MeeBhoomi ROR Document" 
+  width="388" 
+  height="220">
 </div>
 <ul>
   <li>Obtaining bank loans.</li>
@@ -284,7 +296,13 @@
     It is crucial for resolving boundary disputes between neighbors. The MeeBhoomi portal allows you to download these sketches digitally.
 </p>
 <div class="blog-image">
-    <img src="Field.png" alt="Sample of MeeBhoomi Adangal Pahani Document" width="600" height="350">
+    <img 
+  src="Field.webp" 
+  srcset="Field.webp 400w, Field.webp 800w, Field.webp 1200w" 
+  sizes="(max-width: 600px) 388px, 600px"
+  alt="Sample of Field Measurement Book" 
+  width="388" 
+  height="220">
 </div>
 
 <h2>How to Download Your Adangal Online</h2>
@@ -292,7 +310,13 @@
     Follow these steps to view your land details on the official portal:
 </p>
 <div class="blog-image">
-    <img src="downloadadangal.png" alt="Sample of MeeBhoomi Adangal Pahani Document" width="600" height="350">
+    <img 
+  src="downloadadangal.webp" 
+  srcset="downloadadangal.webp 400w, downloadadangal.webp 800w, downloadadangal.webp 1200w" 
+  sizes="(max-width: 600px) 388px, 600px"
+  alt="Sample of MeeBhoomi Adangal Document" 
+  width="388" 
+  height="220">
 </div>
 <ol>
   <li><strong>Visit the Portal:</strong> Go to <a href="http://meebhoomi.ap.gov.in">meebhoomi.ap.gov.in</a>.</li>
@@ -315,7 +339,13 @@
     Linking Aadhaar prevents fraudulent transactions. To check your status:
 </p>
 <div class="blog-image">
-    <img src="aadhaar.jpg" alt="Sample of MeeBhoomi Adangal Pahani Document" width="600" height="350">
+    <img 
+  src="aadhaar.webp" 
+  srcset="aadhaar.webp 400w, aadhaar.webp 800w, aadhaar.webp 1200w" 
+  sizes="(max-width: 600px) 388px, 600px"
+  alt="Sample of MeeBhoomi Aadhaar Document" 
+  width="388" 
+  height="220">
 </div>
 <ol>
   <li>Go to the "Aadhaar/Other Identities" menu.</li>
@@ -360,6 +390,7 @@ FMB sketches are being digitized progressively. If your village map is not avail
 </body>
 
 </html>
+
 
 
 
