--- a/index.html
+++ b/index.html
@@ -108,7 +108,8 @@
     }
 
     .blog-image img {
-        max-width: 100%;
+        width: 100%;
+        max-width: 800px;
         height: auto;
         border-radius: 10px;
         box-shadow: 0 4px 8px rgba(0,0,0,0.1);
@@ -390,6 +391,7 @@ FMB sketches are being digitized progressively. If your village map is not avail
 </body>
 
 </html>
+
 
 
 
