--- a/index.html
+++ b/index.html
@@ -354,6 +354,62 @@
   <li>Enter the District, Zone, Village, and Account Number.</li>
   <li>The system will display if your KYC is completed or pending.</li>
 </ol>
+  <h2>How to Find Your Survey Number Without Physical Documents</h2>
+<p>
+    If you have misplaced your original land papers, you can still identify your Survey Number using the portal's built-in search tools.
+</p>
+
+<h3>1. Search by Name (Pattadar Name)</h3>
+<p>This method is ideal if you are certain of the name registered in the revenue records:</p>
+<ul>
+    <li><strong>Access the Search:</strong> Go to the Adangal or 1-B section of the MeeBhoomi site.</li>
+    <li><strong>Select "Pattadar Name":</strong> Instead of inputting a number, select the "Pattadar Name" (పట్టాదారు పేరు) radio button.</li>
+    <li><strong>Refine Your Search:</strong> Enter the owner’s name.</li>
+    <li><strong>Expert Tip:</strong> Revenue records often use initials or surnames differently. If the full name doesn't work, try searching with just the surname to find a list of all family holdings in that village.</li>
+    <li><strong>Locate Results:</strong> A list will populate showing the names of owners along with their associated Survey Numbers and Khata Numbers.</li>
+</ul>
+
+<h3>2. Using the "Village Map" (Visual Search)</h3>
+<p>If text-based searches fail, a visual "Cadastral Map" can help you identify your land based on its physical location:</p>
+<ul>
+    <li><strong>Open Village Maps:</strong> Click on the "Village Map" (గ్రామ పటం) icon on the home page.</li>
+    <li><strong>Navigate to Your Area:</strong> Input your location details to load the village map.</li>
+    <li><strong>Identify by Landmarks:</strong> Use recognizable features like village roads, irrigation canals, or the position of neighboring plots to find your land on the map.</li>
+    <li><strong>Read the Survey ID:</strong> Every demarcated boundary box on the map contains a number. This number is your Survey Number.</li>
+</ul>
+
+<h3>3. Using the BhuNaksha Portal</h3>
+<p>The BhuNaksha AP tool provides a sophisticated way to view land records overlaid on satellite imagery:</p>
+<ul>
+    <li><strong>Satellite Overlay:</strong> This tool allows you to see actual trees, fences, and buildings on your property via a Google Maps-style view.</li>
+    <li><strong>Coordinate Identification:</strong> By clicking on the specific physical area of your land on the satellite map, the system will automatically pull up the official Survey Number and owner details associated with those geographic coordinates.</li>
+</ul>
+
+  <h2>Official Authority Directory</h2>
+    <p>If your inquiry requires official administrative action rather than general information, you should contact the following authorities directly:</p>
+    
+    <table>
+        <tr>
+            <th>Type of Inquiry</th>
+            <th>Contact Authority</th>
+        </tr>
+        <tr>
+            <td>Correction in Land Records</td>
+            <td>Mandal Revenue Officer (MRO) / Local Tahsildar Office</td>
+        </tr>
+        <tr>
+            <td>Aadhaar Seeding Issues</td>
+            <td>Village Revenue Officer (VRO) at your local Grama Sachivalayam</td>
+        </tr>
+        <tr>
+            <td>Land Conversion (NALA)</td>
+            <td>Revenue Divisional Officer (RDO) </td>
+        </tr>
+        <tr>
+          <td>Official Technical Support</td>
+            <td><a href="mailto:dir-itc@ap.gov.in">dir-itc@ap.gov.in</a></td>
+        </tr>
+    </table>
 
 <h2>Frequently Asked Questions (FAQ)</h2>
 
@@ -391,6 +447,7 @@ FMB sketches are being digitized progressively. If your village map is not avail
 </body>
 
 </html>
+
 
 
 
