--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
    
   </p>
 
- <h2 id="dashboard" style="padding-top: 60px; margin-top: -30px;">Online Services Dashboard</h2>
+ <h2 id="dashboard" class="mb-4" style="padding-top: 60px; margin-top: -30px;">Online Services Dashboard</h2>
   <div class="row g-3 mb-4">
     <div class="col-md-4 col-6"><a class="btn service-btn" href="https://meebhoomi.ap.gov.in/" target="_blank" rel="noopener noreferrer">MeeBhoomi Portal</a></div>
     <div class="col-md-4 col-6"><a class="btn service-btn" href="https://meebhoomi.ap.gov.in/" target="_blank" rel="noopener noreferrer">View Adangal</a></div>
@@ -447,6 +447,7 @@ FMB sketches are being digitized progressively. If your village map is not avail
 </body>
 
 </html>
+
 
 
 
