--- a/index.html
+++ b/index.html
@@ -191,11 +191,13 @@
     <strong>MeeBhoomi</strong> (translating to "Your Land") is the official digital land records repository launched by the Government of Andhra Pradesh in June 2015. 
     It serves as a transparent interface for citizens to access critical documents like the <strong>Adangal</strong> and <strong>Record of Rights (1-B)</strong> without visiting the Tahsildar's office.
   </p>
-  <div style="border: 1px solid #ddd; border-radius: 8px; padding: 20px; max-width: 400px; font-family: Arial, sans-serif; text-align: center; margin: 20px auto;">
-    <img src="https://m.media-amazon.com/images/I/71Y87I0jRXL._SL1500_.jpg" alt="70mai Dashcam" style="width: 100%; max-width: 250px; height: auto; border-radius: 5px;">
+  <div style="border: 1px solid #ddd; border-radius: 8px; padding: 20px; max-width: 400px; font-family: Arial, sans-serif; text-align: center; margin: 20px auto; background-color: #fff;">
+    <img src="https://m.media-amazon.com/images/I/71Y87I0jRXL.jpg" alt="70mai Dashcam" style="width: 100%; max-width: 250px; height: auto; border-radius: 5px; display: block; margin: 0 auto;">
+    
     <h3 style="font-size: 18px; color: #333; margin: 15px 0;">70mai Dashcam A510 - 1944P Ultra HD</h3>
     <p style="font-size: 14px; color: #666;">Top-rated Dashcam with Sony Starvis 2, ADAS, and GPS Built-in.</p>
-    <a href="https://www.amazon.in/dp/B0D3PH398K?tag=junaidmalik0d-21" target="_blank" style="background-color: #FFD814; color: #111; padding: 10px 25px; text-decoration: none; border-radius: 20px; font-weight: bold; display: inline-block; border: 1px solid #FCD200;">View on Amazon</a>
+    
+    <a href="https://www.amazon.in/dp/B0D3PH398K?tag=junaidmalik0d-21" target="_blank" style="background-color: #FFD814; color: #111; padding: 10px 25px; text-decoration: none; border-radius: 20px; font-weight: bold; display: inline-block; border: 1px solid #FCD200; margin-top: 10px;">View on Amazon</a>
 </div>
 
   <p>
@@ -453,6 +455,7 @@ FMB sketches are being digitized progressively. If your village map is not avail
 </body>
 
 </html>
+
 
 
 
