--- a/index.html
+++ b/index.html
@@ -191,20 +191,22 @@
     <strong>MeeBhoomi</strong> (translating to "Your Land") is the official digital land records repository launched by the Government of Andhra Pradesh in June 2015. 
     It serves as a transparent interface for citizens to access critical documents like the <strong>Adangal</strong> and <strong>Record of Rights (1-B)</strong> without visiting the Tahsildar's office.
   </p>
-  <div style="border: 1px solid #e0e0e0; border-radius: 12px; padding: 20px; max-width: 350px; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; text-align: center; margin: 20px auto; box-shadow: 0 4px 8px rgba(0,0,0,0.05); background-color: #ffffff;">
+  <div style="border: 1px solid #ddd; border-radius: 8px; padding: 20px; max-width: 350px; font-family: Arial, sans-serif; text-align: center; margin: 20px auto; background: #fff;">
     
     <a href="https://amzn.to/44SmOsP" target="_blank" rel="nofollow">
-        <img src="https://m.media-amazon.com/images/I/71Y87I0jRXL.jpg" alt="70mai Dashcam A510" style="width: 100%; max-width: 220px; height: auto; margin-bottom: 15px;">
+        <img src="https://images-na.ssl-images-amazon.com/images/I/71Y87I0jRXL._AC_SX450_.jpg" 
+             alt="70mai Dashcam" 
+             style="width: 100%; max-width: 250px; height: auto; margin-bottom: 15px;"
+             onerror="this.src='https://placehold.co/250x200?text=Dashcam+Image+Loading...'">
     </a>
 
-    <h3 style="font-size: 18px; color: #232f3e; line-height: 1.4; margin-bottom: 10px;">70mai Dashcam A510 <br><span style="font-size: 14px; color: #c45500;">(1944P Ultra HD)</span></h3>
+    <h3 style="font-size: 18px; color: #333;">70mai Dashcam A510</h3>
+    <p style="font-size: 13px; color: #666;">Pro 1944P Ultra HD, Sony Starvis 2 Sensor.</p>
     
-    <p style="font-size: 13px; color: #565959; margin-bottom: 20px;">Sony Starvis 2 Sensor, ADAS, and Built-in GPS. Best for Indian roads.</p>
-
-    <a href="https://amzn.to/44SmOsP" target="_blank" rel="nofollow" style="background-color: #ffd814; color: #111; padding: 12px 30px; text-decoration: none; border-radius: 25px; font-weight: 600; display: inline-block; border: 1px solid #fcd200; box-shadow: 0 2px 5px rgba(213,217,217,.5);">
+    <a href="https://amzn.to/44SmOsP" target="_blank" rel="nofollow" 
+       style="background-color: #FFD814; color: #111; padding: 10px 25px; text-decoration: none; border-radius: 20px; font-weight: bold; display: inline-block; border: 1px solid #FCD200;">
         Check Price on Amazon
     </a>
-
 </div>
 
   <p>
@@ -462,6 +464,7 @@ FMB sketches are being digitized progressively. If your village map is not avail
 </body>
 
 </html>
+
 
 
 
