--- a/index.html
+++ b/index.html
@@ -191,25 +191,12 @@
     <strong>MeeBhoomi</strong> (translating to "Your Land") is the official digital land records repository launched by the Government of Andhra Pradesh in June 2015. 
     It serves as a transparent interface for citizens to access critical documents like the <strong>Adangal</strong> and <strong>Record of Rights (1-B)</strong> without visiting the Tahsildar's office.
   </p>
-  <div style="border: 1px solid #ddd; border-radius: 8px; padding: 20px; max-width: 350px; font-family: Arial, sans-serif; text-align: center; margin: 20px auto; background: #fff;">
-    
-    <a href="https://amzn.to/44SmOsP" target="_blank" rel="nofollow">
-        <img src="https://images-na.ssl-images-amazon.com/images/I/71Y87I0jRXL._AC_SX450_.jpg" 
-             alt="70mai Dashcam" 
-             style="width: 100%; max-width: 250px; height: auto; margin-bottom: 15px;"
-             onerror="this.src='https://placehold.co/250x200?text=Dashcam+Image+Loading...'">
-    </a>
+<p>
+  <a href="https://www.amazon.in/dp/B0D3PH398K?pd_rd_i=B0D3PH398K&pd_rd_w=9Z9ZS&content-id=amzn1.sym.67d3dec9-3503-44a1-a945-e969d04cca69&pf_rd_p=67d3dec9-3503-44a1-a945-e969d04cca69&pf_rd_r=S7NYXEAMAS8FB3Y1RHAT&pd_rd_wg=fESjn&pd_rd_r=81030ee9-ef75-4ccc-bdd0-c2f2ff349fef&aref=CbzkTlIRUf&sp_csd=d2lkZ2V0TmFtZT1zcF9kZXRhaWxfdGhlbWF0aWM&th=1&linkCode=ll1&tag=junaidmalik0d-21&linkId=9238cd0beb6411a963541b25f9182598&language=en_IN&ref_=as_li_ss_tl" target="_blank" rel="sponsored noopener">
+  </a> 
+</p>
 
-    <h3 style="font-size: 18px; color: #333;">70mai Dashcam A510</h3>
-    <p style="font-size: 13px; color: #666;">Pro 1944P Ultra HD, Sony Starvis 2 Sensor.</p>
-    
-    <a href="https://amzn.to/44SmOsP" target="_blank" rel="nofollow" 
-       style="background-color: #FFD814; color: #111; padding: 10px 25px; text-decoration: none; border-radius: 20px; font-weight: bold; display: inline-block; border: 1px solid #FCD200;">
-        Check Price on Amazon
-    </a>
-</div>
-
-  <p>
+ <p>
     The portal digitizes land data across all 26 districts of Andhra Pradesh, allowing landowners to verify ownership details, check crop data, and even link their Aadhaar numbers to their survey numbers for added security.
    
   </p>
@@ -464,6 +451,7 @@ FMB sketches are being digitized progressively. If your village map is not avail
 </body>
 
 </html>
+
 
 
 
