--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
     It serves as a transparent interface for citizens to access critical documents like the <strong>Adangal</strong> and <strong>Record of Rights (1-B)</strong> without visiting the Tahsildar's office.
   </p>
 <p>
-  <a href="https://www.amazon.in/dp/B0D3PH398K?pd_rd_i=B0D3PH398K&pd_rd_w=9Z9ZS&content-id=amzn1.sym.67d3dec9-3503-44a1-a945-e969d04cca69&pf_rd_p=67d3dec9-3503-44a1-a945-e969d04cca69&pf_rd_r=S7NYXEAMAS8FB3Y1RHAT&pd_rd_wg=fESjn&pd_rd_r=81030ee9-ef75-4ccc-bdd0-c2f2ff349fef&aref=CbzkTlIRUf&sp_csd=d2lkZ2V0TmFtZT1zcF9kZXRhaWxfdGhlbWF0aWM&th=1&linkCode=ll1&tag=junaidmalik0d-21&linkId=9238cd0beb6411a963541b25f9182598&language=en_IN&ref_=as_li_ss_tl" target="_blank" rel="sponsored noopener">
+  <a href="https://www.amazon.in/dp/B0D3PH398K?pd_rd_i=B0D3PH398K&pd_rd_w=9Z9ZS&content-id=amzn1.sym.67d3dec9-3503-44a1-a945-e969d04cca69&pf_rd_p=67d3dec9-3503-44a1-a945-e969d04cca69&pf_rd_r=S7NYXEAMAS8FB3Y1RHAT&pd_rd_wg=fESjn&pd_rd_r=81030ee9-ef75-4ccc-bdd0-c2f2ff349fef&aref=CbzkTlIRUf&sp_csd=d2lkZ2V0TmFtZT1zcF9kZXRhaWxfdGhlbWF0aWM&th=1&linkCode=ll1&tag=junaidmalik0d-21&linkId=9238cd0beb6411a963541b25f9182598&language=en_IN&ref_=as_li_ss_tl">
   </a> 
 </p>
 
@@ -451,6 +451,7 @@ FMB sketches are being digitized progressively. If your village map is not avail
 </body>
 
 </html>
+
 
 
 
