--- a/index.html
+++ b/index.html
@@ -191,10 +191,17 @@
     <strong>MeeBhoomi</strong> (translating to "Your Land") is the official digital land records repository launched by the Government of Andhra Pradesh in June 2015. 
     It serves as a transparent interface for citizens to access critical documents like the <strong>Adangal</strong> and <strong>Record of Rights (1-B)</strong> without visiting the Tahsildar's office.
   </p>
-<p>
-  <a href="https://www.amazon.in/dp/B0D3PH398K?pd_rd_i=B0D3PH398K&pd_rd_w=9Z9ZS&content-id=amzn1.sym.67d3dec9-3503-44a1-a945-e969d04cca69&pf_rd_p=67d3dec9-3503-44a1-a945-e969d04cca69&pf_rd_r=S7NYXEAMAS8FB3Y1RHAT&pd_rd_wg=fESjn&pd_rd_r=81030ee9-ef75-4ccc-bdd0-c2f2ff349fef&aref=CbzkTlIRUf&sp_csd=d2lkZ2V0TmFtZT1zcF9kZXRhaWxfdGhlbWF0aWM&th=1&linkCode=ll1&tag=junaidmalik0d-21&linkId=9238cd0beb6411a963541b25f9182598&language=en_IN&ref_=as_li_ss_tl">
-  </a> 
-</p>
+<div style="border: 2px solid #232f3e; border-radius: 10px; padding: 25px; max-width: 350px; font-family: 'Segoe UI', sans-serif; text-align: center; margin: 20px auto; background-color: #f7f7f7;">
+    <h3 style="color: #232f3e; margin-bottom: 5px;">70mai Dashcam A510</h3>
+    <p style="color: #cc0c39; font-weight: bold; margin-bottom: 15px;">⭐ Top Rated for Indian Roads</p>
+    <p style="font-size: 14px; color: #555; margin-bottom: 20px;">1944P Ultra HD, Sony Starvis 2 Sensor, ADAS & GPS.</p>
+    
+    <a href="https://amzn.to/44SmOsP" target="_blank" rel="nofollow" 
+       style="background-color: #ffd814; color: #111; padding: 15px 35px; text-decoration: none; border-radius: 5px; font-weight: bold; display: inline-block; border: 1px solid #a88734; box-shadow: 0 1px 0 rgba(255,255,255,.4) inset;">
+       VIEW CURRENT PRICE →
+    </a>
+    <p style="font-size: 11px; color: #888; margin-top: 15px;">(Links to Amazon.in)</p>
+</div>
 
  <p>
     The portal digitizes land data across all 26 districts of Andhra Pradesh, allowing landowners to verify ownership details, check crop data, and even link their Aadhaar numbers to their survey numbers for added security.
@@ -451,6 +458,7 @@ FMB sketches are being digitized progressively. If your village map is not avail
 </body>
 
 </html>
+
 
 
 
