--- a/index.html
+++ b/index.html
@@ -129,6 +129,8 @@
     tr:nth-child(even) { background-color: #f9f9f9; }
     tr:hover { background-color: #f1f1f1; }
   </style>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4061167980012817"
+     crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -446,6 +448,7 @@ FMB sketches are being digitized progressively. If your village map is not avail
 </body>
 
 </html>
+
 
 
 
