--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -357,6 +357,8 @@
       <p><strong>Disclaimer:</strong> This website amis to provide information about Meebhoomi. We are not affiliated with the Government of Andhra Pradesh. This website is created for the public convienience.</p>
     <div class="mb-2">
       <a href="https://meebhoomiap.in">Home</a> |
+      <a href="https://meebhoomiap.in/bhunaksha.html">Bhu Naksha AP</a> |
+      <a href="https://meebhoomiap.in/webland.html">Webland AP</a>
       <a href="https://meebhoomiap.in/about-us.html">About Us</a> |
       <a href="https://meebhoomiap.in/privacy-policy.html">Privacy Policy</a>
     </div>
@@ -371,4 +373,5 @@
 </body>
 
 </html>
+
 
