--- a/index.html
+++ b/index.html
@@ -434,6 +434,8 @@ FMB sketches are being digitized progressively. If your village map is not avail
       <p><strong>Disclaimer:</strong> This website aims to provide information about Meebhoomi. We are not affiliated with the Government of Andhra Pradesh. This website is created for the public convienience.</p>
     <div class="mb-2">
       <a href="https://meebhoomiap.in">Home</a> |
+      <a href="https://meebhoomiap.in/bhunaksha.html">Bhu Naksha AP</a> |
+      <a href="https://meebhoomiap.in/webland.html">Webland AP</a>
       <a href="https://meebhoomiap.in/about-us.html">About Us</a> |
       <a href="https://meebhoomiap.in/privacy-policy.html">Privacy Policy</a>
     </div>
@@ -448,6 +450,7 @@ FMB sketches are being digitized progressively. If your village map is not avail
 </body>
 
 </html>
+
 
 
 
