--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -358,7 +358,7 @@
     <div class="mb-2">
       <a href="https://meebhoomiap.in">Home</a> |
       <a href="https://meebhoomiap.in/bhunaksha.html">Bhu Naksha AP</a> |
-      <a href="https://meebhoomiap.in/webland.html">Webland AP</a>
+      <a href="https://meebhoomiap.in/webland.html">Webland AP</a> |
       <a href="https://meebhoomiap.in/about-us.html">About Us</a> |
       <a href="https://meebhoomiap.in/privacy-policy.html">Privacy Policy</a>
     </div>
@@ -373,5 +373,6 @@
 </body>
 
 </html>
+
 
 
