--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@ FMB sketches are being digitized progressively. If your village map is not avail
     <div class="mb-2">
       <a href="https://meebhoomiap.in">Home</a> |
       <a href="https://meebhoomiap.in/bhunaksha.html">Bhu Naksha AP</a> |
-      <a href="https://meebhoomiap.in/webland.html">Webland AP</a>
+      <a href="https://meebhoomiap.in/webland.html">Webland AP</a> |
       <a href="https://meebhoomiap.in/about-us.html">About Us</a> |
       <a href="https://meebhoomiap.in/privacy-policy.html">Privacy Policy</a>
     </div>
@@ -450,6 +450,7 @@ FMB sketches are being digitized progressively. If your village map is not avail
 </body>
 
 </html>
+
 
 
 
