--- a/webland.html
+++ b/webland.html
@@ -341,7 +341,7 @@
     <div class="mb-2">
       <a href="https://meebhoomiap.in">Home</a> |
       <a href="https://meebhoomiap.in/bhunaksha.html">Bhu Naksha AP</a> |
-      <a href="https://meebhoomiap.in/webland.html">Webland AP</a>
+      <a href="https://meebhoomiap.in/webland.html">Webland AP</a> |
       <a href="https://meebhoomiap.in/about-us.html">About Us</a> |
       <a href="https://meebhoomiap.in/privacy-policy.html">Privacy Policy</a>
     </div>
@@ -354,5 +354,6 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
+
 
 </html>
