--- a/index.html
+++ b/index.html
@@ -206,6 +206,8 @@
     <div class="col-md-4 col-6"><a class="btn service-btn" href="https://meebhoomi.ap.gov.in/" target="_blank" rel="noopener noreferrer">FMB (Village Map)</a></div>
     <div class="col-md-4 col-6"><a class="btn service-btn" href="https://meebhoomi.ap.gov.in/" target="_blank" rel="noopener noreferrer">Aadhaar Linking</a></div>
     <div class="col-md-4 col-6"><a class="btn service-btn" href="https://meebhoomi.ap.gov.in/VAdangal/PPRequest" target="_blank" rel="noopener noreferrer">View Passbook</a></div>
+    <div class="col-md-4 col-6"><a class="btn service-btn" href="https://meebhoomiap.in/bhunaksha.html">Bhu Naksha</a></div>
+    <div class="col-md-4 col-6"><a class="btn service-btn" href="https://meebhoomiap.in/webland.html">Webland</a></div>
  </div>
     
  <table>
@@ -450,6 +452,7 @@ FMB sketches are being digitized progressively. If your village map is not avail
 </body>
 
 </html>
+
 
 
 
