--- a/bhunaksha.html
+++ b/bhunaksha.html
@@ -189,7 +189,7 @@
 
 <main id="main-content">
 <div class="container-fluid my-4">
-            <h1>Bhu Naksha AP: View & Download FMB Cadastral Maps Online @bhunaksha.ap.gov.in</h1>
+            <h1>Bhu Naksha AP: View & Download FMB Cadastral Maps Online</h1>
 
             <section>
                 <p>If you own land in Andhra Pradesh, understanding your property's exact boundaries is critical. Disputes over boundaries are common, but the Andhra Pradesh government has made it easier to verify your land details online through the Bhu Naksha and Meebhoomi portals.</p>
@@ -344,3 +344,4 @@
 
 
 </html>
+
