--- a/webland.html
+++ b/webland.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Webland AP : Land Records Management in Andhra Pradesh @webland.ap.gov.in</title>
+  <title>Webland AP : Land Records Management in Andhra Pradesh</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon.png">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -357,4 +357,5 @@
 
 
 </html>
+
 
