--- a/bhunaksha.html
+++ b/bhunaksha.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Bhu Naksha AP: View and Download Field Measurement Book (FMB) Online @meebhoomi.ap.gov.in</title>
+  <title>Bhu Naksha AP: View and Download Field Measurement Book (FMB) Online</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon.png">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -344,4 +344,5 @@
 
 
 </html>
+
 
