--- a/about-us.html
+++ b/about-us.html
@@ -192,8 +192,8 @@
 
 <div class="translate-bar">
     <button class="lang-btn" onclick="toggleLanguage()">
-        <span class="lang-en">Translate to తెలుగు (Telugu)</span>
-        <span class="lang-te">English లో చదవండి</span>
+        <span class="lang-en">తెలుగులో చూడండి</span>
+        <span class="lang-te">View in English</span>
     </button>
 </div>
 
@@ -252,8 +252,12 @@
 
 <footer class="bg-custom text-center py-3">
   <div class="container">
-      <p class="lang-en"><strong>Disclaimer:</strong> This website aims to provide information about Meebhoomi. We are not affiliated with the Government of Andhra Pradesh. This website is created for the public convienience.</p>
-      <p class="lang-te"><strong>గమనిక:</strong> ఈ వెబ్‌సైట్ మీభూమి గురించి సమాచారాన్ని అందించడమే లక్ష్యంగా పెట్టుకుంది. మాకు ఆంధ్రప్రదేశ్ ప్రభుత్వంతో సంబంధం లేదు. ఈ వెబ్‌సైట్ ప్రజా సౌకర్యార్థం రూపొందించబడింది.</p>
+      <div class="lang-en">
+         <p><strong>Disclaimer:</strong> This website aims to provide information about Meebhoomi. We are not affiliated with the Government of Andhra Pradesh. This website is created for public convenience.</p>
+      </div>
+      <div class="lang-te">
+         <p><strong>నిరాకరణ:</strong> ఈ వెబ్‌సైట్ మీభూమి గురించి సమాచారాన్ని అందించడానికి ఉద్దేశించబడింది. మాకు ఆంధ్రప్రదేశ్ ప్రభుత్వంతో ఎటువంటి సంబంధం లేదు. ఈ వెబ్‌సైట్ ప్రజా సౌకర్యం కోసం సృష్టించబడింది.</p>
+      </div>
       
     <div class="mb-2">
       <a href="https://meebhoomiap.in">
@@ -274,11 +278,13 @@
       </a> |
       <a href="https://meebhoomiap.in/privacy-policy.html">
           <span class="lang-en">Privacy Policy</span>
-          <span class="lang-te">ప్రైవసీ పాలసీ</span>
+          <span class="lang-te">గోప్యతా విధానం</span>
       </a>
     </div>
     <div>
-      © 2026 MeeBhoomi Portal
+      © 2026 
+      <span class="lang-en">MeeBhoomi Portal</span>
+      <span class="lang-te">మీభూమి పోర్టల్</span>
     </div>
   </div>
 </footer>
@@ -314,4 +320,3 @@
 
 </body>
 </html>
-
