--- a/webland.html
+++ b/webland.html
@@ -494,8 +494,12 @@
 </main>
 <footer class="bg-custom text-center py-3">
   <div class="container">
-      <p class="lang-en"><strong>Disclaimer:</strong> This website aims to provide information about Meebhoomi. We are not affiliated with the Government of Andhra Pradesh. This website is created for the public convienience.</p>
-      <p class="lang-te"><strong>గమనిక:</strong> ఈ వెబ్‌సైట్ మీభూమి గురించి సమాచారాన్ని అందించడమే లక్ష్యంగా పెట్టుకుంది. మాకు ఆంధ్రప్రదేశ్ ప్రభుత్వంతో సంబంధం లేదు. ఈ వెబ్‌సైట్ ప్రజా సౌకర్యార్థం రూపొందించబడింది.</p>
+      <div class="lang-en">
+         <p><strong>Disclaimer:</strong> This website aims to provide information about Meebhoomi. We are not affiliated with the Government of Andhra Pradesh. This website is created for public convenience.</p>
+      </div>
+      <div class="lang-te">
+         <p><strong>నిరాకరణ:</strong> ఈ వెబ్‌సైట్ మీభూమి గురించి సమాచారాన్ని అందించడానికి ఉద్దేశించబడింది. మాకు ఆంధ్రప్రదేశ్ ప్రభుత్వంతో ఎటువంటి సంబంధం లేదు. ఈ వెబ్‌సైట్ ప్రజా సౌకర్యం కోసం సృష్టించబడింది.</p>
+      </div>
       
     <div class="mb-2">
       <a href="https://meebhoomiap.in">
@@ -516,11 +520,13 @@
       </a> |
       <a href="https://meebhoomiap.in/privacy-policy.html">
           <span class="lang-en">Privacy Policy</span>
-          <span class="lang-te">ప్రైవసీ పాలసీ</span>
+          <span class="lang-te">గోప్యతా విధానం</span>
       </a>
     </div>
     <div>
-      © 2026 MeeBhoomi Portal
+      © 2026 
+      <span class="lang-en">MeeBhoomi Portal</span>
+      <span class="lang-te">మీభూమి పోర్టల్</span>
     </div>
   </div>
 </footer>
@@ -556,8 +562,3 @@
 
 </body>
 </html>
-
-
-
-
-
