--- a/bhunaksha.html
+++ b/bhunaksha.html
@@ -497,6 +497,43 @@
       © 2026 MeeBhoomi Portal
     </div>
   </div>
+<footer class="bg-custom text-center py-3">
+  <div class="container">
+      <div class="lang-en">
+         <p><strong>Disclaimer:</strong> This website aims to provide information about Meebhoomi. We are not affiliated with the Government of Andhra Pradesh. This website is created for public convenience.</p>
+      </div>
+      <div class="lang-te">
+         <p><strong>నిరాకరణ:</strong> ఈ వెబ్‌సైట్ మీభూమి గురించి సమాచారాన్ని అందించడానికి ఉద్దేశించబడింది. మాకు ఆంధ్రప్రదేశ్ ప్రభుత్వంతో ఎటువంటి సంబంధం లేదు. ఈ వెబ్‌సైట్ ప్రజా సౌకర్యం కోసం సృష్టించబడింది.</p>
+      </div>
+      
+    <div class="mb-2">
+      <a href="https://meebhoomiap.in">
+          <span class="lang-en">Home</span>
+          <span class="lang-te">హోమ్</span>
+      </a> |
+      <a href="https://meebhoomiap.in/bhunaksha.html">
+          <span class="lang-en">Bhu Naksha AP</span>
+          <span class="lang-te">భూ నక్ష AP</span>
+      </a> |
+      <a href="https://meebhoomiap.in/webland.html">
+          <span class="lang-en">Webland AP</span>
+          <span class="lang-te">వెబ్‌ల్యాండ్ AP</span>
+      </a> |
+      <a href="https://meebhoomiap.in/about-us.html">
+          <span class="lang-en">About Us</span>
+          <span class="lang-te">మా గురించి</span>
+      </a> |
+      <a href="https://meebhoomiap.in/privacy-policy.html">
+          <span class="lang-en">Privacy Policy</span>
+          <span class="lang-te">గోప్యతా విధానం</span>
+      </a>
+    </div>
+    <div>
+      © 2026 
+      <span class="lang-en">MeeBhoomi Portal</span>
+      <span class="lang-te">మీభూమి పోర్టల్</span>
+    </div>
+  </div>
 </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
@@ -530,4 +567,3 @@
 
 </body>
 </html>
-
