--- a/bhunaksha.html
+++ b/bhunaksha.html
@@ -480,19 +480,19 @@
           <span class="lang-en">Home</span>
           <span class="lang-te">హోమ్</span>
       </a> |
-      <a href="https://meebhoomiap.in/bhunaksha.html">
+      <a href="https://meebhoomiap.in/bhunaksha">
           <span class="lang-en">Bhu Naksha AP</span>
           <span class="lang-te">భూ నక్ష AP</span>
       </a> |
-      <a href="https://meebhoomiap.in/webland.html">
+      <a href="https://meebhoomiap.in/webland">
           <span class="lang-en">Webland AP</span>
           <span class="lang-te">వెబ్‌ల్యాండ్ AP</span>
       </a> |
-      <a href="https://meebhoomiap.in/about-us.html">
+      <a href="https://meebhoomiap.in/about-us">
           <span class="lang-en">About Us</span>
           <span class="lang-te">మా గురించి</span>
       </a> |
-      <a href="https://meebhoomiap.in/privacy-policy.html">
+      <a href="https://meebhoomiap.in/privacy-policy">
           <span class="lang-en">Privacy Policy</span>
           <span class="lang-te">గోప్యతా విధానం</span>
       </a>
@@ -536,4 +536,5 @@
 
 </body>
 </html>
+
 
